chage all apis